fix #6029 - wrap long text

--- a/projects/storefrontstyles/scss/components/organization/budgets/_budgets-list.scss
+++ b/projects/storefrontstyles/scss/components/organization/budgets/_budgets-list.scss
@@ -17,6 +17,8 @@
       td {
         text-align: center;
         font-size: x-small;
+        word-wrap: break-word;
+        max-width: 0;
       }
     }
   }
